Extremely basic card visuals

--- a/index.html
+++ b/index.html
@@ -43,11 +43,57 @@
 			<div class='detailed'>
 			</div>
 			<div class='text'>
-				<div>
+				
 			</div>
 		</div>
 
 	</div>
+
+
+	<div id="card2">
+		
+		<div class='card'>
+			<div class='general'>
+				<div class='left'>
+					<div class='small-icon'>
+						Lvl 1
+					</div>
+					<div class='small-icon'>
+						Demon
+					</div>
+					<div class='small-icon'>
+						???
+					</div>
+					<div class='small-icon'>
+						???
+					</div>
+				</div>
+				<div class='center'>
+					<div class='image'>
+						<img src='http://homm3sod.ru/images/content/317.jpg' />
+					</div>
+					<div class='name'>
+						Imp
+					</div>
+				</div>
+				<div class='right'>
+					<div class='small-icon'>12</div>
+					<div class='small-icon'>2-3</div>
+					<div class='small-icon'>1/4</div>
+					<div class='small-icon'>
+						???
+					</div>
+				</div>
+			</div>
+			<div class='detailed'>
+			</div>
+			<div class='text'>
+				
+			</div>
+		</div>
+
+	</div>
+
 	<script src="standardFightFunctions.js"></script>
 </body>
 </html>
