Cleaned-up a little bit

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
 	<title>FIGHT</title>
 	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="card.css">
 </head>
 <body>
 	<div id="card1">
-		
 		<div class='card'>
 			<div class='general'>
 				<div class='left'>
@@ -46,12 +46,9 @@
 				
 			</div>
 		</div>
-
 	</div>
 
-
 	<div id="card2">
-		
 		<div class='card'>
 			<div class='general'>
 				<div class='left'>
@@ -91,7 +88,6 @@
 				
 			</div>
 		</div>
-
 	</div>
 
 	<script src="standardFightFunctions.js"></script>
