--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 					</div>
 				</div>
 				<div class='right'>
-					<div class='small-icon'>12</div>
-					<div class='small-icon'>2-3</div>
-					<div class='small-icon'>1/4</div>
-					<div class='small-icon'>
+					<div class='small-icon health'>12</div>
+					<div class='small-icon attack'>2-3</div>
+					<div class='small-icon armor'>1/4</div>
+					<div class='small-icon attackThisTurn'>
 						???
 					</div>
 				</div>
@@ -74,10 +74,10 @@
 					</div>
 				</div>
 				<div class='right'>
-					<div class='small-icon'>12</div>
-					<div class='small-icon'>2-3</div>
-					<div class='small-icon'>1/4</div>
-					<div class='small-icon'>
+					<div class='small-icon health'>12</div>
+					<div class='small-icon attack'>2-3</div>
+					<div class='small-icon armor'>1/4</div>
+					<div class='small-icon attackThisTurn'>
 						???
 					</div>
 				</div>
