Added a little bit improved animation

--- a/index.html
+++ b/index.html
@@ -32,12 +32,10 @@
 					</div>
 				</div>
 				<div class='right'>
-					<div class='small-icon health'>12</div>
-					<div class='small-icon attack'>2-3</div>
-					<div class='small-icon armor'>1/4</div>
-					<div class='small-icon attackThisTurn'>
-						???
-					</div>
+					<div class='small-icon health'></div>
+					<div class='small-icon attack'></div>
+					<div class='small-icon armor'></div>
+					<div class='small-icon attackThisTurn'></div>
 				</div>
 			</div>
 			<div class='detailed'>
@@ -74,12 +72,10 @@
 					</div>
 				</div>
 				<div class='right'>
-					<div class='small-icon health'>12</div>
-					<div class='small-icon attack'>2-3</div>
-					<div class='small-icon armor'>1/4</div>
-					<div class='small-icon attackThisTurn'>
-						???
-					</div>
+					<div class='small-icon health'></div>
+					<div class='small-icon attack'></div>
+					<div class='small-icon armor'></div>
+					<div class='small-icon attackThisTurn'></div>
 				</div>
 			</div>
 			<div class='detailed'>
