Splitted js file

--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
 		</div>
 	</div>
 
+	<script src="minions.js"></script>
 	<script src="standardFightFunctions.js"></script>
+	<script src="interfaceAnimation.js"></script>
+	<script src="script.js"></script>
 </body>
 </html>
