--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 				<div class='center'>
 					<div class='image'>
 						<img src='http://homm3sod.ru/images/content/253.jpg' />
+						<div class='image-animation'></div>
 					</div>
 					<div class='name'>
 						Swordmaster
@@ -66,6 +67,7 @@
 				<div class='center'>
 					<div class='image'>
 						<img src='http://homm3sod.ru/images/content/317.jpg' />
+						<div class='image-animation'></div>
 					</div>
 					<div class='name'>
 						Imp
