--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
 		</div>
 	</div>
 
+	<button id='auto-fight'>Auto fight</button>
+
 	<script src="minions.js"></script>
 	<script src="standardFightFunctions.js"></script>
 	<script src="interfaceAnimation.js"></script>
