Redesigned folder structure and added dummy passive

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<title>FIGHT</title>
-	<link rel="stylesheet" href="style.css">
-	<link rel="stylesheet" href="card.css">
+	<link rel="stylesheet" href="style/style.css">
+	<link rel="stylesheet" href="style/card.css">
 </head>
 <body>
 	<div id="card1">
@@ -29,7 +29,6 @@
 						<div class='image-animation'></div>
 					</div>
 					<div class='name'>
-						Swordmaster
 					</div>
 				</div>
 				<div class='right'>
@@ -70,7 +69,6 @@
 						<div class='image-animation'></div>
 					</div>
 					<div class='name'>
-						Imp
 					</div>
 				</div>
 				<div class='right'>
@@ -90,9 +88,9 @@
 
 	<button id='auto-fight'>Auto fight</button>
 
-	<script src="minions.js"></script>
-	<script src="standardFightFunctions.js"></script>
-	<script src="interfaceAnimation.js"></script>
-	<script src="script.js"></script>
+	<script src="script/minions.js"></script>
+	<script src="script/standardFightFunctions.js"></script>
+	<script src="script/interfaceAnimation.js"></script>
+	<script src="script/script.js"></script>
 </body>
 </html>
