Fixed aura not applying correctly on auto-fight

--- a/index.html
+++ b/index.html
@@ -10,12 +10,8 @@
 		<div class='card'>
 			<div class='general'>
 				<div class='left'>
-					<div class='small-icon'>
-						Lvl 1
-					</div>
-					<div class='small-icon'>
-						Human
-					</div>
+					<div class='small-icon level'></div>
+					<div class='small-icon race'></div>
 					<div class='small-icon'>
 						???
 					</div>
@@ -50,12 +46,8 @@
 		<div class='card'>
 			<div class='general'>
 				<div class='left'>
-					<div class='small-icon'>
-						Lvl 1
-					</div>
-					<div class='small-icon'>
-						Demon
-					</div>
+					<div class='small-icon level'></div>
+					<div class='small-icon race'></div>
 					<div class='small-icon'>
 						???
 					</div>
