Added select fields

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 </head>
 <body>
 	<div id="card1">
+		<div>
+			<select class='fighters'>
+			</select>
+			<button class='select-fighter'>Select</button>
+		</div>
 		<div class='card'>
 			<div class='general'>
 				<div class='left'>
@@ -43,6 +48,11 @@
 	</div>
 
 	<div id="card2">
+		<div>
+			<select class='fighters'>
+			</select>
+			<button class='select-fighter'>Select</button>
+		</div>
 		<div class='card'>
 			<div class='general'>
 				<div class='left'>
