Added positive/negative effects

--- a/index.html
+++ b/index.html
@@ -17,12 +17,8 @@
 				<div class='left'>
 					<div class='small-icon level'></div>
 					<div class='small-icon race'></div>
-					<div class='small-icon'>
-						???
-					</div>
-					<div class='small-icon'>
-						???
-					</div>
+					<div class='small-icon'></div>
+					<div class='small-icon'></div>
 				</div>
 				<div class='center'>
 					<div class='image'>
@@ -58,12 +54,8 @@
 				<div class='left'>
 					<div class='small-icon level'></div>
 					<div class='small-icon race'></div>
-					<div class='small-icon'>
-						???
-					</div>
-					<div class='small-icon'>
-						???
-					</div>
+					<div class='small-icon'></div>
+					<div class='small-icon'></div>
 				</div>
 				<div class='center'>
 					<div class='image'>
