Changed file structure

--- a/index.html
+++ b/index.html
@@ -82,9 +82,13 @@
 
 	<button id='auto-fight'>Auto fight</button>
 
+	<script src="minions/Human/Swordmaster.js"></script>
+	<script src="minions/Human/Priest.js"></script>
+	<script src="minions/Orc/Wolfraider.js"></script>
+	<script src="minions/Demon/Gog.js"></script>
 	<script src="script/minions.js"></script>
-	<script src="script/standardFightFunctions.js"></script>
-	<script src="script/interfaceAnimation.js"></script>
+	<script src="script/fight.js"></script>
+	<script src="script/interface.js"></script>
 	<script src="script/script.js"></script>
 </body>
 </html>
